Perkin-UAT/force-app/main/default/objects/Contact/fields/GS_Segment__c.field-meta.xml
<CustomField>
    <fullName>GS_Segment__c</fullName>
    <label>Diagnostics – Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virology</fullName>
            </value>
            <value>
                <fullName>Neonatal screening</fullName>
            </value>
            <value>
                <fullName>1T screening</fullName>
            </value>
            <value>
                <fullName>2T screening</fullName>
            </value>
            <value>
                <fullName>Pre-eclampsia</fullName>
            </value>
            <value>
                <fullName>NIPT</fullName>
            </value>
            <value>
                <fullName>Clinical diagnostics</fullName>
            </value>
            <value>
                <fullName>Clinical MSMS</fullName>
            </value>
            <value>
                <fullName>BoBs</fullName>
            </value>
            <value>
                <fullName>BoBs PGS</fullName>
            </value>
            <value>
                <fullName>BoBs POC</fullName>
            </value>
            <value>
                <fullName>BoBs postnatal diagnosis</fullName>
            </value>
            <value>
                <fullName>BoBs prenatal diagnosis</fullName>
            </value>
            <value>
                <fullName>BoBs stem cell screening</fullName>
            </value>
            <value>
                <fullName>CGX arrays</fullName>
            </value>
            <value>
                <fullName>CGX oncogenetics</fullName>
            </value>
            <value>
                <fullName>CGX postnatal diagnosis</fullName>
            </value>
            <value>
                <fullName>CGX prenatal diagnosis</fullName>
            </value>
            <value>
                <fullName>Cytogenetics</fullName>
            </value>
            <value>
                <fullName>FragilEase carrier screening</fullName>
            </value>
            <value>
                <fullName>FragilEase newborn screening</fullName>
            </value>
            <value>
                <fullName>FragilEase postnatal diagnosis</fullName>
            </value>
            <value>
                <fullName>FragilEase prenatal diagnosis</fullName>
            </value>
            <value>
                <fullName>Fragile X</fullName>
            </value>
            <value>
                <fullName>NAP biobank</fullName>
            </value>
            <value>
                <fullName>NAP blood screening</fullName>
            </value>
            <value>
                <fullName>NAP HLA</fullName>
            </value>
            <value>
                <fullName>NAP human genetics</fullName>
            </value>
            <value>
                <fullName>NAP plants</fullName>
            </value>
            <value>
                <fullName>NAP veterinary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>