Perkin-UAT/force-app/main/default/objects/Contact/fields/GS_Well_and_Healthy_News_Letter__c.field-meta.xml
<CustomField>
    <fullName>GS_Well_and_Healthy_News_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>genetic screening news letter check box</description>
    <label>GS Well and Healthy News Letter</label>
    <type>Checkbox</type>
</CustomField>