Perkin-UAT/force-app/main/default/objects/Contact/fields/Has_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Has_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Opportunity</label>
    <type>Checkbox</type>
</CustomField>