Perkin-UAT/force-app/main/default/objects/Contact/fields/Header_On_Email__c.field-meta.xml
<CustomField>
    <fullName>Header_On_Email__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Header On Email</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>