Perkin-UAT/force-app/main/default/objects/Contact/fields/How_do_they_deliver_data_to_customers__c.field-meta.xml
<CustomField>
    <fullName>How_do_they_deliver_data_to_customers__c</fullName>
    <label>How do they deliver data to customers?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual email is sent</fullName>
            </value>
            <value>
                <fullName>Software auto-sends via email</fullName>
            </value>
            <value>
                <fullName>Manual upload to FTP Site</fullName>
            </value>
            <value>
                <fullName>Manual transfer to CD-Rom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>