Perkin-UAT/force-app/main/default/objects/Contact/fields/How_many_customers_do_they_support__c.field-meta.xml
<CustomField>
    <fullName>How_many_customers_do_they_support__c</fullName>
    <label>How many customers do they support?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;50</fullName>
            </value>
            <value>
                <fullName>50-250</fullName>
            </value>
            <value>
                <fullName>250-1000</fullName>
            </value>
            <value>
                <fullName>1000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>