Perkin-UAT/force-app/main/default/objects/Contact/fields/ICH_ISH__c.field-meta.xml
<CustomField>
    <fullName>ICH_ISH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Focus Area</description>
    <label>ICH/ISH</label>
    <type>Checkbox</type>
</CustomField>