Perkin-UAT/force-app/main/default/objects/Contact/fields/Immunohistochemistry__c.field-meta.xml
<CustomField>
    <fullName>Immunohistochemistry__c</fullName>
    <label>Immunohistochemistry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>