Perkin-UAT/force-app/main/default/objects/Contact/fields/Imported_Contact__c.field-meta.xml
<CustomField>
    <fullName>Imported_Contact__c</fullName>
    <label>Imported Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>