Perkin-UAT/force-app/main/default/objects/Contact/fields/In_vivo_imaging_modalities_currentlyused__c.field-meta.xml
<CustomField>
    <fullName>In_vivo_imaging_modalities_currentlyused__c</fullName>
    <label>In vivo imaging modalities currentlyused</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>ART</fullName>
            </value>
            <value>
                <fullName>Bioluminescence</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>Fluorescence</fullName>
            </value>
            <value>
                <fullName>Fluorescence Tomography</fullName>
            </value>
            <value>
                <fullName>FMT</fullName>
            </value>
            <value>
                <fullName>FMT1</fullName>
            </value>
            <value>
                <fullName>Hammatsu</fullName>
            </value>
            <value>
                <fullName>IVIS</fullName>
            </value>
            <value>
                <fullName>IVIS 100</fullName>
            </value>
            <value>
                <fullName>IVIS 200</fullName>
            </value>
            <value>
                <fullName>IVIS 50</fullName>
            </value>
            <value>
                <fullName>IVIS Lumina</fullName>
            </value>
            <value>
                <fullName>IVIS Spectrum</fullName>
            </value>
            <value>
                <fullName>Kodax</fullName>
            </value>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>None, buying now</fullName>
            </value>
            <value>
                <fullName>Olympus</fullName>
            </value>
            <value>
                <fullName>Olympus OV100</fullName>
            </value>
            <value>
                <fullName>PET</fullName>
            </value>
            <value>
                <fullName>PET/CT</fullName>
            </value>
            <value>
                <fullName>Planar System</fullName>
            </value>
            <value>
                <fullName>SPECT</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Ultrasound</fullName>
            </value>
            <value>
                <fullName>VisualSonics micro-ultrasound</fullName>
            </value>
            <value>
                <fullName>Xenogen</fullName>
            </value>
            <value>
                <fullName>CRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>