Perkin-UAT/force-app/main/default/objects/Contact/fields/INF_Allow_Portal_Notifications__c.field-meta.xml
<CustomField>
    <fullName>INF_Allow_Portal_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Portal Notifications</label>
    <type>Checkbox</type>
</CustomField>