Perkin-UAT/force-app/main/default/objects/Contact/fields/INF_Chinese_Country__c.field-meta.xml
<CustomField>
    <fullName>INF_Chinese_Country__c</fullName>
    <formula>IF(CONTAINS(  Email  , &quot;.cn&quot;), &quot;Chinese&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chinese Country</label>
    <type>Text</type>
</CustomField>