Perkin-UAT/force-app/main/default/objects/Contact/fields/INF_Portuguese_Country__c.field-meta.xml
<CustomField>
    <fullName>INF_Portuguese_Country__c</fullName>
    <formula>IF(CONTAINS(  Email  , &quot;.br&quot;), &quot;Portuguese&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portuguese Country</label>
    <type>Text</type>
</CustomField>