Perkin-UAT/force-app/main/default/objects/Contact/fields/INF_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>INF_Product_Family__c</fullName>
    <description>This is the product family that will get carried over from the lead</description>
    <label>INF Product Family</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Genius</fullName>
            </value>
            <value>
                <fullName>Bioanalytical Module</fullName>
            </value>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>ChemACX</fullName>
            </value>
            <value>
                <fullName>ChemBio3D</fullName>
            </value>
            <value>
                <fullName>ChemBioDraw</fullName>
            </value>
            <value>
                <fullName>ChemBioOffice</fullName>
            </value>
            <value>
                <fullName>ChemBioOffice Enterprise</fullName>
            </value>
            <value>
                <fullName>ChemBioViz</fullName>
            </value>
            <value>
                <fullName>ChemDraw</fullName>
            </value>
            <value>
                <fullName>ChemDraw ActiveX/Plugin</fullName>
            </value>
            <value>
                <fullName>ChemOffice</fullName>
            </value>
            <value>
                <fullName>ChemScript</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Connector for SAP</fullName>
            </value>
            <value>
                <fullName>Connectors</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>Email Incident</fullName>
            </value>
            <value>
                <fullName>E-Notebook</fullName>
            </value>
            <value>
                <fullName>E-Notebook Enterprise</fullName>
            </value>
            <value>
                <fullName>E-Notebook for Biology</fullName>
            </value>
            <value>
                <fullName>E-Notebook for Chemistry</fullName>
            </value>
            <value>
                <fullName>E-Notebook for Formulations</fullName>
            </value>
            <value>
                <fullName>Formulation and Analytical / LIMS</fullName>
            </value>
            <value>
                <fullName>GAMESS</fullName>
            </value>
            <value>
                <fullName>Gaussian</fullName>
            </value>
            <value>
                <fullName>Gaussian Utilities</fullName>
            </value>
            <value>
                <fullName>GaussView</fullName>
            </value>
            <value>
                <fullName>GeneSifter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>