Perkin-UAT/force-app/main/default/objects/Contact/fields/INF_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>INF_Product_Line__c</fullName>
    <label>INF Product Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QA/QC</fullName>
            </value>
            <value>
                <fullName>Enterprise R-D</fullName>
            </value>
            <value>
                <fullName>Personal Applications</fullName>
            </value>
            <value>
                <fullName>Analysis-Visualisation</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>