Perkin-UAT/force-app/main/default/objects/Contact/fields/INF_Tech_Contact__c.field-meta.xml
<CustomField>
    <fullName>INF_Tech_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Contact</label>
    <type>Checkbox</type>
</CustomField>