Perkin-UAT/force-app/main/default/objects/Contact/fields/Ion_Channel__c.field-meta.xml
<CustomField>
    <fullName>Ion_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For App Focus</description>
    <label>Ion Channel</label>
    <type>Checkbox</type>
</CustomField>