Perkin-UAT/force-app/main/default/objects/Contact/fields/Is_Hot_Conversion_OOP__c.field-meta.xml
<CustomField>
    <fullName>Is_Hot_Conversion_OOP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets checked if Conversion OOP record</description>
    <label>Is Hot Conversion OOP</label>
    <type>Checkbox</type>
</CustomField>