Perkin-UAT/force-app/main/default/objects/Contact/fields/Is_TurnBack_or_Rejected_3__c.field-meta.xml
<CustomField>
    <fullName>Is_TurnBack_or_Rejected_3__c</fullName>
    <description>Boolean yields true or false if any of the SAI fields say Turnback or Rejected</description>
    <formula>And 
( 
OR( 
CONTAINS (TEXT(Status_Water__c),&quot;Turnback&quot;), 
CONTAINS (TEXT(Status_Water__c),&quot;Rejected&quot;), 
CONTAINS (TEXT(Status_Air__c),&quot;Turnback&quot;), 
CONTAINS (TEXT(Status_Air__c),&quot;Rejected&quot;), 
CONTAINS (TEXT(Status_Soil_Solids__c),&quot;Turnback&quot;), 
CONTAINS (TEXT(Status_Soil_Solids__c),&quot;Rejected&quot;), 
CONTAINS (TEXT(Status_Maternal_Fetal_Health__c),&quot;Turnback&quot;), 
CONTAINS (TEXT(Status_Maternal_Fetal_Health__c),&quot;Rejected&quot;), 
CONTAINS (TEXT(Status_Newborn_Screening__c),&quot;Turnback&quot;), 
CONTAINS (TEXT(Status_Newborn_Screening__c),&quot;Rejected&quot;), 
CONTAINS (TEXT(Status_Applied_Genomics__c),&quot;Turnback&quot;), 
CONTAINS (TEXT(Status_Applied_Genomics__c),&quot;Rejected&quot;) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is TurnBack or Rejected 3</label>
    <type>Checkbox</type>
</CustomField>