Perkin-UAT/force-app/main/default/objects/Contact/fields/IsArchive__c.field-meta.xml
<CustomField>
    <fullName>IsArchive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to identify if we can archive this records</description>
    <label>IsArchive</label>
    <type>Checkbox</type>
</CustomField>