Perkin-UAT/force-app/main/default/objects/Contact/fields/Kinase_Cell_Signaling__c.field-meta.xml
<CustomField>
    <fullName>Kinase_Cell_Signaling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Application Focus Section</description>
    <label>Kinase/Cell Signaling</label>
    <type>Checkbox</type>
</CustomField>