Perkin-UAT/force-app/main/default/objects/Contact/fields/Laboratory_Phone__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Phone__c</fullName>
    <label>Laboratory Phone</label>
    <type>Phone</type>
</CustomField>