Perkin-UAT/force-app/main/default/objects/Contact/fields/Last_CO__c.field-meta.xml
<CustomField>
    <fullName>Last_CO__c</fullName>
    <label>Last CO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>