Perkin-UAT/force-app/main/default/objects/Contact/fields/Last_Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Source_Detail__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <formula>TEXT( Last_Lead_Source_Channel__c )   &amp; &quot;|&quot; &amp;  Last_Lead_Source_Content__c  &amp; &quot;|&quot; &amp;  Last_Lead_Source_Form__c  &amp; &quot;|&quot;  &amp;  Last_Lead_Source_Partner__c  &amp; &quot;|&quot; &amp;  Last_Lead_Source_Program__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Lead Source - Detail</label>
    <type>Text</type>
</CustomField>