Perkin-UAT/force-app/main/default/objects/Contact/fields/Last_Lead_Source_Program__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Source_Program__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Last Lead Source - Program</label>
    <type>TextArea</type>
</CustomField>