Perkin-UAT/force-app/main/default/objects/Contact/fields/Last_SFDC_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_SFDC_Campaign_ID__c</fullName>
    <description>Populated by Eloqua list uploads.  Back-end field used to populate MIT table in Description field.</description>
    <label>Last SFDC Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>