Perkin-UAT/force-app/main/default/objects/Contact/fields/LC_List__c.field-meta.xml
<CustomField>
    <fullName>LC_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LC List</label>
    <type>Checkbox</type>
</CustomField>