Perkin-UAT/force-app/main/default/objects/Contact/fields/LC_Profile_Increase__c.field-meta.xml
<CustomField>
    <fullName>LC_Profile_Increase__c</fullName>
    <label>LC Profile Increase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liquid Chromatography - LC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>