Perkin-UAT/force-app/main/default/objects/Contact/fields/Lead_Owner_LDR_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_LDR_Conversion__c</fullName>
    <description>ANNUITAS PDG Program</description>
    <label>Lead Owner - LDR Conversion</label>
    <type>TextArea</type>
</CustomField>