Perkin-UAT/force-app/main/default/objects/Contact/fields/Lead_Owner_Sales__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Sales__c</fullName>
    <description>Stamped with the Sales Rep when the opportunity owner changes away from the LDR for the first time on that Contact record.  Note: This is a custom field for historical tracking, it is a stamp of the first assigned Sales Rep and does not update.</description>
    <label>Lead Owner - Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>