Perkin-UAT/force-app/main/default/objects/Contact/fields/Lead_Source_Back_up_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Back_up_2__c</fullName>
    <label>Lead Source Back up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>