Perkin-UAT/force-app/main/default/objects/Contact/fields/Legacy_Source__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Source__c</fullName>
    <description>used for legacy data loads - created by Jan 1/4/2010</description>
    <label>Legacy Source</label>
    <length>8</length>
    <type>Text</type>
</CustomField>