Perkin-UAT/force-app/main/default/objects/Contact/fields/Life_Science_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Life_Science_Area_of_Interest__c</fullName>
    <description>S-692773/T-941080. Created as part of data migration</description>
    <label>Life Science Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Autoimmune disease</fullName>
            </value>
            <value>
                <fullName>Biotherapeutics</fullName>
            </value>
            <value>
                <fullName>Blood disorders</fullName>
            </value>
            <value>
                <fullName>Cardiovascular disease</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>Cosmetology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Gene and cell therapy</fullName>
            </value>
            <value>
                <fullName>HTS - Assay development</fullName>
            </value>
            <value>
                <fullName>HTS - Centralized lead optimisation</fullName>
            </value>
            <value>
                <fullName>HTS - Screening per se</fullName>
            </value>
            <value>
                <fullName>Immuno-Oncology</fullName>
            </value>
            <value>
                <fullName>Inf Disease and virology</fullName>
            </value>
            <value>
                <fullName>Inflammation and Immunology</fullName>
            </value>
            <value>
                <fullName>In Vitro Diagnostic</fullName>
            </value>
            <value>
                <fullName>Metabolism</fullName>
            </value>
            <value>
                <fullName>NASH/ Fibrosis</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Ophtalmology</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Pharmacology</fullName>
            </value>
            <value>
                <fullName>Production/ QC</fullName>
            </value>
            <value>
                <fullName>PROTAC</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Rare disease</fullName>
            </value>
            <value>
                <fullName>Reproductive research</fullName>
            </value>
            <value>
                <fullName>Toxicology</fullName>
            </value>
            <value>
                <fullName>Vaccines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>