Perkin-UAT/force-app/main/default/objects/Contact/fields/Ligand_Receptor_Binding__c.field-meta.xml
<CustomField>
    <fullName>Ligand_Receptor_Binding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Focus area</description>
    <label>Ligand Receptor Binding</label>
    <type>Checkbox</type>
</CustomField>