Perkin-UAT/force-app/main/default/objects/Contact/fields/link__c.field-meta.xml
<CustomField>
    <fullName>link__c</fullName>
    <formula>&quot;https://perkinelmer.my.salesforce.com/&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>link</label>
    <type>Text</type>
</CustomField>